test/corpus/real_examles.txt
=====================================
Example 1, Fibonacci
=====================================
pragma circom 2.0.0;

// Fibonacci with custom starting numbers
template Fibonacci(n) {
  assert(n >= 2);
  signal input in[2];
  signal output out;

  signal fib[n+1];
  fib[0] <== in[0];
  fib[1] <== in[1];
  for (var i = 2; i <= n; i++) {
    fib[i] <== fib[i-2] + fib[i-1];
  }

  out <== fib[n];
}
---
(source_file
      (pragma_directive
        (circom_pragma_token
          (circom_version)))
      (comment)
      (template_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)))
        (template_body
          (expression_statement
            (call_expression
              (identifier)
              (argument_list
                (binary_expression
                  (identifier)
                  (int)))))
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier)
            (array_definition
              (int)))
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier))
          (variable_declaration_statement
            (signal)
            (identifier)
            (array_definition
              (binary_expression
                (identifier)
                (int))))
          (expression_statement
            (array_access_expression
              (assignment_expression
                (array_access_expression
                  (identifier)
                  (int))
                (identifier))
              (int)))
          (expression_statement
            (array_access_expression
              (assignment_expression
                (array_access_expression
                  (identifier)
                  (int))
                (identifier))
              (int)))
          (for_statement
            (variable_declaration_statement
              (var)
              (identifier)
              (int))
            (expression_statement
              (binary_expression
                (identifier)
                (identifier)))
            (increment_expression
              (identifier))
            (block_statement
              (expression_statement
                (array_access_expression
                  (binary_expression
                    (array_access_expression
                      (assignment_expression
                        (array_access_expression
                          (identifier)
                          (identifier))
                        (identifier))
                      (binary_expression
                        (identifier)
                        (int)))
                    (identifier))
                  (binary_expression
                    (identifier)
                    (int))))))
          (expression_statement
            (array_access_expression
              (assignment_expression
                (identifier)
                (identifier))
              (identifier))))))
=====================================
Example 2, Sudoku
=====================================
pragma circom 2.0.0;

include "circomlib/circuits/bitify.circom";

// Finds Math.floor(log2(n))
function log2(n) {
  var tmp = 1, ans = 1;
  while (tmp < n) {
    ans++;
    tmp *= 2;
  }
  return ans;
}

// Assert that two elements are not equal
template NonEqual() {
  signal input in[2];
  signal inv;

  // we check if (in[0] - in[1] != 0)
  // because 1/0 results in 0, so the constraint won't hold
  inv <-- 1 / (in[1] - in[0]);
  inv * (in[1] - in[0]) === 1;
}

// Assert that number is representable by b-bits
template AssertBitLength(b) {
  assert(b < 254);
  signal input in;

  // compute b-bit representation of the number  
  signal bits[b];
  var sum_of_bits = 0;
  for (var i = 0; i < b; i++) {
    bits[i] <-- (in >> i) & 1;
    bits[i] * (1 - bits[i]) === 0;
    sum_of_bits += (2 ** i) * bits[i];
  }

  // check if sum is equal to number itself
  in === sum_of_bits;
}

// Checks that `in` is in range [MIN, MAX]
template InRange(MIN, MAX) {
  assert(MIN < MAX);
  signal input in;
  
  // number of bits to represent MAX
  var b = log2(MAX) + 1; 

  component lowerBound = AssertBitLength(b);
  component upperBound = AssertBitLength(b);
  lowerBound.in <== in - MIN; // e.g. 1 - 1 = 0 (for 0 <= in)
  upperBound.in <== in + (2 ** b) - MAX - 1; // e.g. 9 + (15 - 9) = 15 (for in <= 15)
}

// Assert that all given values are unique
template Distinct(n) {
  signal input in[n];
  component nonEqual[n][n]; // TODO; has extra comps here
  for(var i = 0; i < n; i++){
    for(var j = 0; j < i; j++){
      nonEqual[i][j] = NonEqual();
      nonEqual[i][j].in <== [in[i], in[j]];
    }
  }
}

template Sudoku(n_sqrt) {
  var n = n_sqrt * n_sqrt;
  signal input solution[n][n]; // solution is a 2D array of numbers
  signal input puzzle[n][n]; // puzzle is the same, but a zero indicates a blank

  // ensure that solution & puzzle agrees
  for (var row_i = 0; row_i < n; row_i++) {
    for (var col_i = 0; col_i < n; col_i++) {
      // puzzle is either empty (0), or the same as solution
      puzzle[row_i][col_i] * (puzzle[row_i][col_i] - solution[row_i][col_i]) === 0;
    } 
  }

  // ensure all values in the solution are in range
  component inRange[n][n];
  for (var row_i = 0; row_i < n; row_i++) {
    for (var col_i = 0; col_i < n; col_i++) {
      inRange[row_i][col_i] = InRange(1, n);
      inRange[row_i][col_i].in <== solution[row_i][col_i];
    }
  }

  // ensure all values in the solution are distinct
  component distinctRows[n];
  for (var row_i = 0; row_i < n; row_i++) {
    for (var col_i = 0; col_i < n; col_i++) {
      if (row_i == 0) {
        distinctRows[col_i] = Distinct(n);
      }
      distinctRows[col_i].in[row_i] <== solution[row_i][col_i];
    }
  }
  component distinctCols[n];
  for (var col_i = 0; col_i < n; col_i++) {
    for (var row_i = 0; row_i < n; row_i++) {
      if (col_i == 0) {
        distinctCols[row_i] = Distinct(n);
      }
      distinctCols[row_i].in[col_i] <== solution[row_i][col_i];
    }
  }

  // ensure that all values in squares are distinct
  component distinctSquares[n];
  var s_i = 0;
  for (var sr_i = 0; sr_i < n_sqrt; sr_i++) {
    for (var sc_i = 0; sc_i < n_sqrt; sc_i++) {
      // square index
      distinctSquares[s_i] = Distinct(n);
      
      // (r, c) now marks the start of this square
      var r = sr_i * n_sqrt;
      var c = sc_i * n_sqrt;
      var i = 0;
      for (var row_i = r; row_i < r + n_sqrt; row_i++) {
        for (var col_i = c; col_i < c + n_sqrt; col_i++) {
          distinctSquares[s_i].in[i] <== solution[row_i][col_i];
          i++;
        }
      }

      s_i++;
    }
  }

}
---
(source_file
      (pragma_directive
        (circom_pragma_token
          (circom_version)))
      (include_directive
        (string))
      (comment)
      (function_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)))
        (function_body
          (variable_declaration_statement
            (var)
            (identifier)
            (int)
            (identifier)
            (int))
          (while_statement
            (binary_expression
              (identifier)
              (identifier))
            (block_statement
              (expression_statement
                (increment_expression
                  (identifier)))
              (expression_statement
                (assignment_expression
                  (identifier)
                  (int)))))
          (return_statement
            (identifier))))
      (comment)
      (template_definition
        (identifier)
        (parameter_list)
        (template_body
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier)
            (array_definition
              (int)))
          (variable_declaration_statement
            (signal)
            (identifier))
          (comment)
          (comment)
          (expression_statement
            (assignment_expression
              (identifier)
              (binary_expression
                (int)
                (parenthesized_expression
                  (array_access_expression
                    (binary_expression
                      (array_access_expression
                        (identifier)
                        (int))
                      (identifier))
                    (int))))))
          (expression_statement
            (assignment_expression
              (binary_expression
                (identifier)
                (parenthesized_expression
                  (array_access_expression
                    (binary_expression
                      (array_access_expression
                        (identifier)
                        (int))
                      (identifier))
                    (int))))
              (int)))))
      (comment)
      (template_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)))
        (template_body
          (expression_statement
            (call_expression
              (identifier)
              (argument_list
                (binary_expression
                  (identifier)
                  (int)))))
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier))
          (comment)
          (variable_declaration_statement
            (signal)
            (identifier)
            (array_definition
              (identifier)))
          (variable_declaration_statement
            (var)
            (identifier)
            (int))
          (for_statement
            (variable_declaration_statement
              (var)
              (identifier)
              (int))
            (expression_statement
              (binary_expression
                (identifier)
                (identifier)))
            (increment_expression
              (identifier))
            (block_statement
              (expression_statement
                (assignment_expression
                  (array_access_expression
                    (identifier)
                    (identifier))
                  (binary_expression
                    (parenthesized_expression
                      (binary_expression
                        (identifier)
                        (identifier)))
                    (int))))
              (expression_statement
                (assignment_expression
                  (binary_expression
                    (array_access_expression
                      (identifier)
                      (identifier))
                    (parenthesized_expression
                      (array_access_expression
                        (binary_expression
                          (int)
                          (identifier))
                        (identifier))))
                  (int)))
              (expression_statement
                (array_access_expression
                  (assignment_expression
                    (identifier)
                    (binary_expression
                      (parenthesized_expression
                        (binary_expression
                          (int)
                          (identifier)))
                      (identifier)))
                  (identifier)))))
          (comment)
          (expression_statement
            (assignment_expression
              (identifier)
              (identifier)))))
      (comment)
      (template_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier))
          (parameter
            (identifier)))
        (template_body
          (expression_statement
            (call_expression
              (identifier)
              (argument_list
                (binary_expression
                  (identifier)
                  (identifier)))))
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier))
          (comment)
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (call_expression
                (identifier)
                (argument_list
                  (identifier)))
              (int)))
          (variable_declaration_statement
            (component)
            (identifier)
            (call_expression
              (identifier)
              (argument_list
                (identifier))))
          (variable_declaration_statement
            (component)
            (identifier)
            (call_expression
              (identifier)
              (argument_list
                (identifier))))
          (expression_statement
            (assignment_expression
              (member_expression
                (identifier)
                (property_identifier))
              (binary_expression
                (identifier)
                (identifier))))
          (comment)
          (expression_statement
            (assignment_expression
              (member_expression
                (identifier)
                (property_identifier))
              (binary_expression
                (binary_expression
                  (binary_expression
                    (identifier)
                    (parenthesized_expression
                      (binary_expression
                        (int)
                        (identifier))))
                  (identifier))
                (int))))
          (comment)))
      (comment)
      (template_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)))
        (template_body
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier)
            (array_definition
              (identifier)))
          (variable_declaration_statement
            (component)
            (identifier)
            (array_definition
              (identifier)
              (identifier)))
          (comment)
          (for_statement
            (variable_declaration_statement
              (var)
              (identifier)
              (int))
            (expression_statement
              (binary_expression
                (identifier)
                (identifier)))
            (increment_expression
              (identifier))
            (block_statement
              (for_statement
                (variable_declaration_statement
                  (var)
                  (identifier)
                  (int))
                (expression_statement
                  (binary_expression
                    (identifier)
                    (identifier)))
                (increment_expression
                  (identifier))
                (block_statement
                  (expression_statement
                    (assignment_expression
                      (array_access_expression
                        (array_access_expression
                          (identifier)
                          (identifier))
                        (identifier))
                      (call_expression
                        (identifier))))
                  (expression_statement
                    (assignment_expression
                      (member_expression
                        (array_access_expression
                          (array_access_expression
                            (identifier)
                            (identifier))
                          (identifier))
                        (property_identifier))
                      (array
                        (array_access_expression
                          (identifier)
                          (identifier))
                        (array_access_expression
                          (identifier)
                          (identifier)))))))))))
      (template_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)))
        (template_body
          (variable_declaration_statement
            (var)
            (identifier)
            (binary_expression
              (identifier)
              (identifier)))
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier)
            (array_definition
              (identifier)
              (identifier)))
          (comment)
          (variable_declaration_statement
            (signal
              (signal_visability))
            (identifier)
            (array_definition
              (identifier)
              (identifier)))
          (comment)
          (comment)
          (for_statement
            (variable_declaration_statement
              (var)
              (identifier)
              (int))
            (expression_statement
              (binary_expression
                (identifier)
                (identifier)))
            (increment_expression
              (identifier))
            (block_statement
              (for_statement
                (variable_declaration_statement
                  (var)
                  (identifier)
                  (int))
                (expression_statement
                  (binary_expression
                    (identifier)
                    (identifier)))
                (increment_expression
                  (identifier))
                (block_statement
                  (comment)
                  (expression_statement
                    (assignment_expression
                      (binary_expression
                        (array_access_expression
                          (array_access_expression
                            (identifier)
                            (identifier))
                          (identifier))
                        (parenthesized_expression
                          (array_access_expression
                            (array_access_expression
                              (binary_expression
                                (array_access_expression
                                  (array_access_expression
                                    (identifier)
                                    (identifier))
                                  (identifier))
                                (identifier))
                              (identifier))
                            (identifier))))
                      (int)))))))
          (comment)
          (variable_declaration_statement
            (component)
            (identifier)
            (array_definition
              (identifier)
              (identifier)))
          (for_statement
            (variable_declaration_statement
              (var)
              (identifier)
              (int))
            (expression_statement
              (binary_expression
                (identifier)
                (identifier)))
            (increment_expression
              (identifier))
            (block_statement
              (for_statement
                (variable_declaration_statement
                  (var)
                  (identifier)
                  (int))
                (expression_statement
                  (binary_expression
                    (identifier)
                    (identifier)))
                (increment_expression
                  (identifier))
                (block_statement
                  (expression_statement
                    (assignment_expression
                      (array_access_expression
                        (array_access_expression
                          (identifier)
                          (identifier))
                        (identifier))
                      (call_expression
                        (identifier)
                        (argument_list
                          (int)
                          (identifier)))))
                  (expression_statement
                    (array_access_expression
                      (array_access_expression
                        (assignment_expression
                          (member_expression
                            (array_access_expression
                              (array_access_expression
                                (identifier)
                                (identifier))
                              (identifier))
                            (property_identifier))
                          (identifier))
                        (identifier))
                      (identifier)))))))
          (comment)
          (variable_declaration_statement
            (component)
            (identifier)
            (array_definition
              (identifier)))
          (for_statement
            (variable_declaration_statement
              (var)
              (identifier)
              (int))
            (expression_statement
              (binary_expression
                (identifier)
                (identifier)))
            (increment_expression
              (identifier))
            (block_statement
              (for_statement
                (variable_declaration_statement
                  (var)
                  (identifier)
                  (int))
                (expression_statement
                  (binary_expression
                    (identifier)
                    (identifier)))
                (increment_expression
                  (identifier))
                (block_statement
                  (if_statement
                    (binary_expression
                      (identifier)
                      (int))
                    (block_statement
                      (expression_statement
                        (assignment_expression
                          (array_access_expression
                            (identifier)
                            (identifier))
                          (call_expression
                            (identifier)
                            (argument_list
                              (identifier)))))))
                  (expression_statement
                    (array_access_expression
                      (array_access_expression
                        (assignment_expression
                          (array_access_expression
                            (member_expression
                              (array_access_expression
                                (identifier)
                                (identifier))
                              (property_identifier))
                            (identifier))
                          (identifier))
                        (identifier))
                      (identifier)))))))
          (variable_declaration_statement
            (component)
            (identifier)
            (array_definition
              (identifier)))
          (for_statement
            (variable_declaration_statement
              (var)
              (identifier)
              (int))
            (expression_statement
              (binary_expression
                (identifier)
                (identifier)))
            (increment_expression
              (identifier))
            (block_statement
              (for_statement
                (variable_declaration_statement
                  (var)
                  (identifier)
                  (int))
                (expression_statement
                  (binary_expression
                    (identifier)
                    (identifier)))
                (increment_expression
                  (identifier))
                (block_statement
                  (if_statement
                    (binary_expression
                      (identifier)
                      (int))
                    (block_statement
                      (expression_statement
                        (assignment_expression
                          (array_access_expression
                            (identifier)
                            (identifier))
                          (call_expression
                            (identifier)
                            (argument_list
                              (identifier)))))))
                  (expression_statement
                    (array_access_expression
                      (array_access_expression
                        (assignment_expression
                          (array_access_expression
                            (member_expression
                              (array_access_expression
                                (identifier)
                                (identifier))
                              (property_identifier))
                            (identifier))
                          (identifier))
                        (identifier))
                      (identifier)))))))
          (comment)
          (variable_declaration_statement
            (component)
            (identifier)
            (array_definition
              (identifier)))
          (variable_declaration_statement
            (var)
            (identifier)
            (int))
          (for_statement
            (variable_declaration_statement
              (var)
              (identifier)
              (int))
            (expression_statement
              (binary_expression
                (identifier)
                (identifier)))
            (increment_expression
              (identifier))
            (block_statement
              (for_statement
                (variable_declaration_statement
                  (var)
                  (identifier)
                  (int))
                (expression_statement
                  (binary_expression
                    (identifier)
                    (identifier)))
                (increment_expression
                  (identifier))
                (block_statement
                  (comment)
                  (expression_statement
                    (assignment_expression
                      (array_access_expression
                        (identifier)
                        (identifier))
                      (call_expression
                        (identifier)
                        (argument_list
                          (identifier)))))
                  (comment)
                  (variable_declaration_statement
                    (var)
                    (identifier)
                    (binary_expression
                      (identifier)
                      (identifier)))
                  (variable_declaration_statement
                    (var)
                    (identifier)
                    (binary_expression
                      (identifier)
                      (identifier)))
                  (variable_declaration_statement
                    (var)
                    (identifier)
                    (int))
                  (for_statement
                    (variable_declaration_statement
                      (var)
                      (identifier)
                      (identifier))
                    (expression_statement
                      (binary_expression
                        (identifier)
                        (binary_expression
                          (identifier)
                          (identifier))))
                    (increment_expression
                      (identifier))
                    (block_statement
                      (for_statement
                        (variable_declaration_statement
                          (var)
                          (identifier)
                          (identifier))
                        (expression_statement
                          (binary_expression
                            (identifier)
                            (binary_expression
                              (identifier)
                              (identifier))))
                        (increment_expression
                          (identifier))
                        (block_statement
                          (expression_statement
                            (array_access_expression
                              (array_access_expression
                                (assignment_expression
                                  (array_access_expression
                                    (member_expression
                                      (array_access_expression
                                        (identifier)
                                        (identifier))
                                      (property_identifier))
                                    (identifier))
                                  (identifier))
                                (identifier))
                              (identifier)))
                          (expression_statement
                            (increment_expression
                              (identifier)))))))
                  (expression_statement
                    (increment_expression
                      (identifier))))))))))
=====================================
Example 3, Float add
=====================================
pragma circom 2.0.0;

// circuits adapted from https://github.com/rdi-berkeley/zkp-mooc-lab

include "circomlib/circuits/comparators.circom";
include "circomlib/circuits/switcher.circom";
include "circomlib/circuits/gates.circom";
include "circomlib/circuits/bitify.circom";

/*
 * Finds Math.floor(log2(n))
 */
function log2(n) {
  var tmp = 1, ans = 1;
  while (tmp < n) {
    ans++;
    tmp *= 2;
  }
  return ans;
}

/*
 * Basically `out = cond ? ifTrue : ifFalse`
 */
template IfElse() {
  signal input cond;
  signal input ifTrue;
  signal input ifFalse;
  signal output out;

  // cond * T - cond * F + F
  // 0    * T - 0    * F + F = 0 - 0 + F = F
  // 1    * T - 1    * F + F = T - F + F = T
  out <== cond * (ifTrue - ifFalse) + ifFalse;
}

/*
 * Outputs `out` = 1 if `in` is at most `b` bits long, and 0 otherwise.
 */
template CheckBitLength(b) {
  assert(b < 254);
  signal input in;
  signal output out;

  // compute b-bit representation of the number  
  signal bits[b];
  var sum_of_bits = 0;
  for (var i = 0; i < b; i++) {
    bits[i] <-- (in >> i) & 1;
    bits[i] * (1 - bits[i]) === 0;
    sum_of_bits += (2 ** i) * bits[i];
  }

  // check if sum is equal to number itself
  component eq = IsEqual();
  eq.in[0] <== sum_of_bits;
  eq.in[1] <== in;
  out <== eq.out;
}

/*
 * Enforces the well-formedness of an exponent-mantissa pair (e, m), which is defined as follows:
 * if `e` is zero, then `m` must be zero
 * else, `e` must be at most `k` bits long, and `m` must be in the range [2^p, 2^p+1)
 */
template CheckWellFormedness(k, p) {
  signal input e;
  signal input m;

  // check if `e` is zero
  component is_e_zero = IsZero();
  is_e_zero.in <== e;

  // Case I: `e` is zero
  //// `m` must be zero
  component is_m_zero = IsZero();
  is_m_zero.in <== m;

  // Case II: `e` is nonzero
  //// `e` is `k` bits
  component check_e_bits = CheckBitLength(k);
  check_e_bits.in <== e;
  //// `m` is `p`+1 bits with the MSB equal to 1
  //// equivalent to check `m` - 2^`p` is in `p` bits
  component check_m_bits = CheckBitLength(p);
  check_m_bits.in <== m - (1 << p);

  // choose the right checks based on `is_e_zero`
  component if_else = IfElse();
  if_else.cond <== is_e_zero.out;
  if_else.ifTrue <== is_m_zero.out;
  //// check_m_bits.out * check_e_bits.out is equivalent to check_m_bits.out AND check_e_bits.out
  if_else.ifFalse <== check_m_bits.out * check_e_bits.out;

  // assert that those checks passed
  if_else.out === 1;
}

/*
 * Right-shifts `x` by `shift` bits to output `y`, where `shift` is a public circuit parameter.
 */
template RightShift(b, shift) {
  assert(shift < b);
  signal input x;
  signal output y;
  
  // convert number to bits
  component x_bits = Num2Bits(b);
  x_bits.in <== x;

  // do the shifting
  signal y_bits[b-shift];
  for (var i = 0; i < b-shift; i++) {
    y_bits[i] <== x_bits.out[shift+i];
  } 

  // convert shifted bits to number
  component y_num = Bits2Num(b-shift);
  y_num.in <== y_bits;
  y <== y_num.out;
}

/*
 * Rounds the input floating-point number and checks to ensure that rounding does not make the mantissa unnormalized.
 * Rounding is necessary to prevent the bitlength of the mantissa from growing with each successive operation.
 * The input is a normalized floating-point number (e, m) with precision `P`, where `e` is a `k`-bit exponent and `m` is a `P`+1-bit mantissa.
 * The output is a normalized floating-point number (e_out, m_out) representing the same value with a lower precision `p`.
 */
template RoundAndCheck(k, p, P) {
  signal input e;
  signal input m;
  signal output e_out;
  signal output m_out;
  assert(P > p);
